--- a/templates/frontpage.html
+++ b/templates/frontpage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html data-theme="light">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,7 +11,10 @@
 
 <!-- Milligram CSS -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css">
-
+<link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css"
+/>
 
 <style>
   body {
@@ -96,6 +99,7 @@
   <button class="button button-outline" onclick="dynamicSort('set_parts')">Sort by Parts</button>
   <button class="button button-outline" onclick="dynamicSort('set_name')">Sort by Name</button>
   </center>
+
   <!-- Add more buttons for other text values if needed -->
 	</div>
 
