--- a/templates/base.html
+++ b/templates/base.html
@@ -1,16 +1,26 @@
 <!doctype html>
-<html>
+<html data-theme="light">
+
+
   <head>
       <title>{{ title }}</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- CSS Reset -->
+<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">    <!-- CSS Reset -->
+<link href="https://cdn.jsdelivr.net/npm/simple-datatables@latest/dist/style.css" rel="stylesheet" type="text/css">
+
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
+
 
 <!-- Milligram CSS -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css">
+<link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css"
+/>
+
+<script src="https://cdn.jsdelivr.net/npm/simple-datatables@latest" type="text/javascript"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 <style>
-
 th {
 	text-align: left;
 	margin: 0px;
@@ -18,6 +28,7 @@ th {
 }
 
 table {
+  
 }
 
 #data {
@@ -137,6 +148,9 @@ td {
   border: 1px solid #d1d1d1;
 }
 
+.highlighted {
+	  background-color: yellow; /* Adjust as needed */
+}
 
 td img{
     display: block;
@@ -163,6 +177,8 @@ td img{
   width: 100%;
   height: 100%;
 }
+
+
 
 .lightbox-content {
   max-width: 90%;
