--- a/templates/bootstrap_table.html
+++ b/templates/bootstrap_table.html
@@ -70,6 +70,76 @@
   </table>
 </div>
 
+  <h1>Minifigs</h1>
+
+{% for fig in minifigs_file.figs %}
+
+<h2>{{ fig.name}}</h2>
+
+<img src="{{ '/static/figs/' + fig.set_num + '.jpg' }}" class="lightbox-trigger" style="height: 100px; width: auto;"><span style="font-size: 50px;">X {{ fig.quantity }}</span>
+
+<div class="center-table">
+<table id="sdata" class="table">
+    <thead>
+      <tr>
+        <th></th>
+        <th style="text-align:center;margin:0px;" class="fixed-width">ID</th>
+        <th class="fixed-width">Name</th>
+        <th>Total Qty</th>
+      </tr>
+    </thead>
+    <tbody>
+    {% for part in fig.parts %}
+    <tr>
+      <td><img src="{{ '/static/figs/' + part.part_num + '.jpg' }}" class="lightbox-trigger" style="height: 50px; width: auto;"></td>
+      <td style="text-align:center;margin:0px;">{{ part.part_num }}</td>
+      <td>{{ part.name }}</td>
+      <td>{{ part.quantity * fig.quantity }}</td>
+      {% for i in json_file['unit'] %}
+        
+          <td class="centered-cell">
+      <div class="inputContainer">
+          {% set ns = namespace(count='') %}
+      <!-- <form id="number-form" action="/{{ tmp }}" method="post"> -->
+      <form id="number-form">
+          <input type="hidden" name="numberID" id="numberID" value="{{ tmp }}"> 
+          <input type="hidden" name="brickpartpart_num" id="brickpartpart_num" value="{{ part.part_num }}">
+          <input type="hidden" name="count" value="{{ i }}">
+          <input type="hidden" name="index" id="index" value="{{ loop.index0 }}">
+          <input type="hidden" name="is_spare" id="is_spare" value="">
+          <input type="hidden" name="brickcolorname" id="brickcolorname" value="{{ part.color_name }}">
+          {% for j in json_file['unit'][loop.index0]['bricks']['missing'] %}
+            {% if j['brick']['ID'] == part.part_num and j['brick']['color_name'] == part.color_name %}
+
+    
+            {% endif %}
+          {% endfor %}
+      <div class='inputField'>
+  <input type="tel" style="text-align:center;font-size: 16px;" id="numberInput" name="numberInput" value="{{ ns.count }}" pattern="\d+">
+  <span style="display:none">{{ ns.count }}</span>
+  <button class="square-button" id="bnumber-form" type="submit">
+    <img src="/static/save.svg" alt="Save Icon">
+  </button>
+
+      </div>
+              </form>
+      </div>
+          </td>
+        {% endfor %}
+    </tr>
+    {% endfor %}
+    </tbody>
+  </table>
+</div>
+
+
+
+{% endfor %} 
+
+
+
+
+
 
 
 
