--- a/templates/bootstrap_table.html
+++ b/templates/bootstrap_table.html
@@ -220,11 +220,12 @@ document.addEventListener('DOMContentLoaded', function () {
   lightboxTrigger.forEach(function (element) {
     element.addEventListener('click', function () {
 	const imgSrc = element.getAttribute('src');
-	textContent = ''
+	textContent = '';
 try {
 	     textContent  = element.closest('tr').querySelector('td:nth-child(3)').textContent; // Adjust the index accordingly
       lightboxText.textContent = textContent;
 } catch (e) {
+	textContent = '';
 }
 
       lightboxImage.setAttribute('src', imgSrc);
